Man Intro Updates
- Apply the contents updates proposed by Anssi.
- Add the `COPYING` license file to the list of "Mandatory Resources"
  that authors need to include in their source adventures.
- Edit the `COPYING` license file, changing "Standard Library v2.1" to
  "Standard Library v2", so we won't need to tweak it every time there's
  a version bump.
- Remove ALAN IDE screenshot from the book, and delete the file from the
  project (it no longer represented the current library modules).
- Comment out the text following the screenshot, since most of it refers
  to obsolete DLLs which are no longer shipped with ALAN, and also since
  there's no longer the screenshot to which it refers (I'll leave the
  original text in a comment block, in case we want to resume it in the
  future, with a new screenshot).
- Add various WIP-status & editors' notes admonition blocks to chapters
  and section which needs to be revised.

--- a/extras_src/manual/StdLibMan-inc_attributes.adoc
+++ b/extras_src/manual/StdLibMan-inc_attributes.adoc
@@ -67,5 +67,6 @@ alternative links on the GH Pages website, etc.).
 :lib_messages_runtime: pass:q,a[link:{StdLibDir}/lib_messages_runtime.i[`lib_messages_runtime.i`^,title="View library source file"]]
 :lib_verbs: pass:q,a[link:{StdLibDir}/lib_verbs.i[`lib_verbs.i`^,title="View library source file"]]
 :lib_verbs_restrictions: pass:q,a[link:{StdLibDir}/lib_verbs_restrictions.i[`lib_verbs_restrictions.i`^,title="View library source file"]]
+:COPYING: pass:q,a[link:{StdLibDir}/COPYING[`COPYING`^,title="View library license file"]]
 
 // EOF //
