--- a/extras_src/manual/StdLibMan1_05.adoc
+++ b/extras_src/manual/StdLibMan1_05.adoc
@@ -12,6 +12,17 @@
 [[ch.default-attributes]]
 = Default Library Attributes
 
+.EDITORS' NOTE
+[CAUTION]
+=====================================
+This whole chapter should probably be removed altogether, and replaced with an Appendix presenting all the library-defined attributes in a well formatted table, where we could have a column describing how the library uses each attribute, and another mentioning potential uses for the author (all of it with nice cross-reference links, etc.).
+
+See https://github.com/AnssiR66/AlanStdLib/issues/114[Issue #114] for a discussion on library attributes in the _StdLib Manual_, and the proposal to dump this chapter.
+
+What we could do instead, is transforming this whole chapter in a lightweight introduction to library attributes, providing an overview of what features they provide, and a couple of simple usage-examples.
+=====================================
+
+
 The attributes in the following list are pre-defined in the library.
 When you coin your own attributes for your game, please be aware that these attributes already exist.
 Using any of the attributes listed below for your own purposes doesn't necessarily cause any problems, but if problems arise, it's likely because of their being used in the library.
