Man: Drop Ch. 6
This commit disposes of the "Default Library Attributes" chapter (from
Part "Getting Started") and replaces it with an Appendix placeholder
where we'll add a table listing all library attributes (see #114).

- Rename `StdLibMan1_05.adoc` (Ch. 6. "Default Library Attributes") to
  `StdLibManA_attributes.adoc` (App. A. "Default Library Attributes"):
  - Remove all the original contents.
- Rename all Appendices ADoc sources, replacing the App counters with
  text identifiers that make it easier to recognize which source is what:
  - `StdLibManA_01.adoc` -> `StdLibManA_i18n.adoc`
  - `StdLibManA_02.adoc` -> `StdLibManA_examples.adoc`
- Remove from library sources all the region tags comments that were
  used for dynamic inclusion of the predefined attributes.

--- a/extras_src/manual/StdLibManA.adoc
+++ b/extras_src/manual/StdLibManA.adoc
@@ -17,8 +17,10 @@ This last part of the book presents various appendices on side topics of the Sta
 
 :leveloffset: +1
 
-include::StdLibManA_01.adoc[]
+include::StdLibManA_attributes.adoc[]
 
-include::StdLibManA_02.adoc[]
+include::StdLibManA_i18n.adoc[]
+
+include::StdLibManA_examples.adoc[]
 
 :leveloffset: -1
