--- a/extras_src/tutorials/Clothing_Guide.asciidoc
+++ b/extras_src/tutorials/Clothing_Guide.asciidoc
@@ -1,6 +1,11 @@
-= The Clothing Guide
-Tristano Ajmone <tajmone@gmail.com>
-v2, 2019-05-05
+:StdLibVer: 2.2.0-RC
+:doctitle: The Clothing Guide
+:title: ALAN StdLib Clothing Guide
+:author: Tristano Ajmone
+:revremark: ALAN 3.0beta7
+:version-label:
+:revnumber: StdLib {StdLibVer}
+:revdate: 2020-11-08
 :lang: en
 // TOC Settings:
 :toc: left
@@ -47,20 +52,29 @@ help the reader distinguish which code belongs to what:
 // *                                                                           *
 // *****************************************************************************
 
-An introductory reference guide to using the Standard Library clothing features and undestanding the coverage attributes of the `clothing` class, and how to set their values in clothes istances.
+How to use the new clothing system of StdLib v{StdLibVer}.
 
-[WARNING]
+An tutorial on how to use the Standard Library clothing features and understand the coverage attributes of the `clothing` class, and how to set their values in clothes instances.
+
 ==============================================================
-This document is currently undergoing adaptation from the old clothing system to the new one.
-The text needs to be revised, and since there is no fixed-values _Clothing Table_ in the new system, we need to provide on or more arbitrary examples of layers enumerations so that the reader can refer to them along the tutorial.
+[.big.red]#*The Clothing System Has Changed*#
+
+The clothing system has been thoroughly revised in v{StdLibVer} of the library:
+
+* The `worn` entity and the `wearing` Set have been dropped and replaced by the `worn` boolean attribute, making the clothing system easier to work with.
+* The body-coverage attributes are no longer constrained to fixed values, and can now be assigned arbitrary values, so the old _Clothing Table_ is no longer needed.
+* There's a new `facecover` body-coverage attribute.
+* Two optional attributes were added to handle special clothing items:
+** `blockslegs` -- used for _skirts_ and _coats_, which don't prevent accessing legsware.
+** `twopieces` -- used for items covering legs and torso with two separate pieces that should be handled as a single item, e.g. a _bikini_.
 ==============================================================
 
 
 == Introduction
 
-The Standard Library adds some useful classes and verbs for handling clothing to allow the main character to wear and disrobe clothes in a layered manner -- i.e. to prevent putting on or removing a clothing item when a worn item of a higher layer stands in the way (e.g. wearing socks on top of shoes).
+The Standard Library adds some useful classes and verbs for handling clothing to allow the main character to wear and disrobe clothes in a layered manner -- i.e. to prevent putting on or removing a clothing item when a worn item of a higher layer stands in the way (e.g. wearing socks on top of shoes, or wearing/removing them without first removing the shoes).
 
-Optionally, the library also allows to assign a `sex` value to clothes, in order to prevent the main character from wearing clothes that don't match his/her own `sex` value.
+Optionally, the library also allows to assign a `sex` value to clothes, in order to prevent the main character from wearing clothes that don't match his/her own gender (i.e. the `sex` value of the Hero).
 
 This document explores these features and provides some examples on how to implement clothing in your own adventures.
 
@@ -69,14 +83,12 @@ This document explores these features and provides some examples on how to imple
 
 The library defines the `clothing` class for clothing items, which adds to its instances some special attributes:
 
-.Predefined attributes of `clothing` class -- defined in `lib_classes.i`
+.Predefined attributes of the `clothing` class -- defined in `lib_clothing.i`
 [source,alan,role=lib]
 --------------------------------------------------------------------------------
 EVERY clothing ISA OBJECT
 
   IS wearable.
-
-  IS sex 0. -- If not zero, restricts wearing to actors with same 'sex' value.
 
   -- Body coverage layered-values, by area:
   IS headcover  0.  -- Head.
@@ -89,15 +101,17 @@ EVERY clothing ISA OBJECT
   -- Attributes for special clothing (skirts, coats, bikinis, etc.):
 
   IS blockslegs.
-  -- i.e. the item prevents wearing/removing legsware from the layers below
-  -- (skirts and coats are 'NOT blockslegs').
+    -- i.e. the item prevents wearing/removing legsware from the layers below
+    -- (skirts and coats are 'NOT blockslegs').
 
   IS NOT twopieces.
-  -- For items covering legs + torso ('topcover' & 'botcover' <> 0) that should
-  -- be treated as a single piece (e.g. a one-piece swimming suite).
-  -- Items which are 'twopieces' (eg. a bikini) can be worn/removed while
-  -- wearing a skirt for, although handled as a single clothing item, they cover
-  -- legs and torso via two separate pieces.
+    -- For items covering legs + torso ('topcover' & 'botcover' <> 0) that
+    -- should be treated as a single piece (e.g. a one-piece swimming suite).
+    -- Items which are 'twopieces' (eg. a bikini) can be worn/removed while
+    -- wearing a skirt for, although handled as a single clothing item, they
+    -- cover legs and torso via two separate pieces.
+
+  IS sex 0. -- If not zero, restricts wearing to actors with same 'sex' value.
 --------------------------------------------------------------------------------
 
 Clothing also rely on the `worn` attribute, which is defined on `EVERY THING` in `lib_definitions.i`:
@@ -108,51 +122,40 @@ Clothing also rely on the `worn` attribute, which is defined on `EVERY THING` in
 --------------------------------------------------------------------------------
 ADD TO EVERY THING
   ...
-  IS NOT worn.
-    -- (for 'clothing' instances) it's not worn by any actor.
-    -- -------------------------------------------------------------------------
+  NOT wearable. -- Only `clothing` instances are wearable, by default.
+  NOT worn.     -- (for `clothing` instances) it's not worn by any actor.
+    -- ------------------------------------------------------------------------
     -- NOTE: Authors can also use this attribute to implement wearables other
-    --       than clothing (eg. devices, like headphones, a VR headset, etc.).
+    --       than clothing (e.g. devices, like headphones, a VR headset, etc.).
     --       The library ensures that any verbs which could remove a thing from
-    --       an actor also set the thing as 'NOT worn', in case authors are
-    --       using this attribute outside of the 'clothing' class context.
-    -- -------------------------------------------------------------------------
+    --       an actor also set the thing as `NOT worn`, in case authors are
+    --       using this attribute outside of the `clothing` class context.
+    -- ------------------------------------------------------------------------
 --------------------------------------------------------------------------------
 
 
 We shall now look into these attributes and how they can be used to personalize clothing in your adventures.
 
 
-=== Body Coverage Attributes
+=== Body-Coverage Attributes
 
-By default, all new clothing instances will have all body coverage attributes set to zero.
-When you create new clothing items, you need to assign to them some arbitrary body coverage values that are consistent throughout your adventure.
+By default, every new clothing instance will have its body-coverage attributes set to zero.
+When you create new clothing items, you need to assign to them some arbitrary body-coverage values that are consistent throughout your adventure.
 
-The body coverage values of a clothing item indicate:
+The body-coverage values of a clothing item indicate:
 
 1. the body areas it covers,
 2. the wearing layer(s) it belongs to.
 
 The body area is indicated by the attribute name, where a value of zero indicates that the clothing item doesn't affect that area at all.
 The layer of interest is indicated by the value itself, where higher values indicate higher layers (i.e. further away from the skin).
-Layer values are integer numbers, and authors are free to chose arbitrary layers values without constraints -- i.e. you are not obliged to assign layers in consecutive order, you can for example start from layer 5, and assing to every next layer the value of the previous one plus 3.
+Layer values are integer numbers, and authors are free to chose arbitrary layers values, without constraints -- i.e. you are not obliged to assign layers in consecutive order, you can for example start from layer 5, and assign to every next layer the value of its previous layer plus 3.
 
-Leaving gaps between layers is actually a good strategy, for if you later on realize that you need to assign a new layer to accomodate new clothing items in intermediate layers (e.g. a jumper that goes on top of a shirt and below a coat) you can use the unassigned layers for it.
-
-[WARNING]
-=============
-These must be expanded upon, broken in smaller senteces and provide examples, to make it simpler for the reader.
-=============
+Leaving gaps between layers is actually a good strategy, because if later on you realize that you need to assign a new layer to accommodate new clothing items in intermediate layers (e.g. a jumper that goes on top of a shirt and below a coat) you can use an unassigned layer value, without having to renumber all the assigned layer values.
 
 Some body areas can take multiple layers of clothes, but each body layer can only be wearing one item at the time.
 For example, the hero can be wearing over his chest a vest, a shirt and a sweater, for each one of them occupies a different layer in the `topcover` area (e.g. 1, 2 and 3).
-But he can't wear a sweater and a pullover at the same time, for they both occupy the same area and layer (`topcover 3`).
-
-[WARNING]
-=============
-The paragraph above only made sense in reference to the old _Clothing Table_, which had fixed values.
-I'll need to add an example at the start of the tutorial, to provide references to an arbitrary layer numbering system that the reader can related to.
-=============
+But he can't wear a sweater and a pullover at the same time, if these two items were both assigned the same body-area layer (e.g. `topcover 3`).
 
 Although he might put on trousers even if he isn't wearing any underpants, he can neither put on nor remove underpants while wearing trousers, because the latter prevent access to the layer occupied by the former.
 In other words, while the library doesn't impose wearing clothes on each layer, it will prevent putting on or removing clothing when another item stands in the way.
@@ -171,8 +174,13 @@ As you might have noticed, the library tries to implement a realistic approach t
 
 == Practical Examples
 
-
 Now let's dive into some practical examples of how to use clothing, from simple to complex.
+
+[WARNING]
+=================================
+This tutorial hasn't been completed yet! Only a simple example is provided for the time being.
+=================================
+
 
 
 === Simple Clothing
@@ -190,7 +198,7 @@ Here's the adventure outline:
 
 ============
 The Hero is a waiter in his one-bedroom flat who must take a shower, get dressed and rush to work.
-He won't be able to take a shower if he's wearing or carrying clothes, and he won't be allowed to leave the flat unless dressed.
+He won't be able to take a shower if he's wearing or carrying clothes, and he won't be allowed to leave the flat unless he's dressed.
 The adventure ends when he leaves the flat.
 ============
 
@@ -240,8 +248,8 @@ Its implementation is quite straightforward, so here we'll only comment on the `
 include::{utf8dir}/{adv-source}[tag=shower_check]
 -------------------------------------------------
 
-The actual `Check` only needs to verify that the uniform is `not in hero`, for the action is to be prevented regarless of wether the clothing item is being carried or worn -- the whole idea is that it shouldn't get wet.
-If the check condition is violated, we then resort to an `If` statement in order to produce an appropriate response depending on wether the uniform `is worn` or just carried (`else`) by the Hero.
+The actual `Check` only needs to verify that the uniform is `not in hero`, for the action is to be prevented regardless of whether the clothing item is being carried or worn -- the whole idea is that it shouldn't get wet.
+If the check condition is violated, we then resort to an `If` statement in order to produce an appropriate response depending on whether the uniform `is worn` or just carried (`else`) by the Hero.
 
 
 Let's compile our draft adventure to test that it's behaving as expected.
@@ -289,9 +297,9 @@ This being the logical succession for checking if an actor is wearing a specific
 
 [NOTE]
 ================
-In this context we could have omitted `directly` and use just `Check uniform in hero` instead, since there are no carriable containers in the game.
+In this context we could have omitted `directly` and use just `Check uniform in hero` instead, since in this game there are no containers which the hero might be carrying.
 
-Acutally, it would have been sufficient to just `Check uniform is worn`, since there are no other actors in this game it's implicit that only the Hero could be wearing it -- but, hey, this is a tutorial!
+Actually, it would have been sufficient to just `Check uniform is worn`, since there are no other actors in this game it's implicit that only the Hero could be wearing it -- but, hey, this is a tutorial!
 ================
 
 
@@ -309,32 +317,39 @@ Here ends our first tutorial on how to implement very simple clothing.
 
 Here's an example of how common clothing can be mapped to layer values in an adventure.
 
-.Common Clothes Examples
-[cols="<25d,5*^15m",options="header"]
-|=========================================================================
-| Clothing       | headcover | topcover | botcover | footcover | handcover
+[NOTE]
+================================
+Unlike with previous editions of the library, the clothing table presented below is merely an arbitrary example of how clothing layers could be organized, but it's no longer the only way to assign layers to clothing items.
 
-| hat                  |   2 |        0 |        0 |         0 |         0
-| vest/bra             |   0 |        2 |        0 |         0 |         0
-| undies/panties       |   0 |        0 |        2 |         0 |         0
-| teddy                |   0 |        4 |        4 |         0 |         0
-| blouse/shirt/T-shirt |   0 |        8 |        0 |         0 |         0
-| dress/coveralls      |   0 |        8 |       32 |         0 |         0
-| skirt                |   0 |        0 |       32 |         0 |         0
-| trousers/shorts      |   0 |        0 |       16 |         0 |         0
-| sweater/pullover     |   0 |       16 |        0 |         0 |         0
-| jacket               |   0 |       32 |        0 |         0 |         0
-| coat                 |   0 |       64 |       64 |         0 |         0
-| socks/stockings      |   0 |        0 |        0 |         2 |         0
-| tights/pantiehose    |   0 |        0 |        8 |         2 |         0
-| shoes/boots          |   0 |        0 |        0 |         4 |         0
-| gloves               |   0 |        0 |        0 |         0 |         2
-|=========================================================================
+We chose to replicate in this table the original layering values of the old _Clothing Table_, just because end users are familiar with it, and as a reminder that the new layering system is backward compatible with adventures created for previous versions of the library v2.x.
+================================
+
+.Common Clothes Examples
+[cols="<25d,6*^15m",options="header"]
+|=====================================================================================
+| Clothing       | headcover | topcover | botcover | footcover | handcover | facecover
+
+| hat                  |   2 |        0 |        0 |         0 |         0 |         0
+| vest/bra             |   0 |        2 |        0 |         0 |         0 |         0
+| undies/panties       |   0 |        0 |        2 |         0 |         0 |         0
+| teddy                |   0 |        4 |        4 |         0 |         0 |         0
+| blouse/shirt/T-shirt |   0 |        8 |        0 |         0 |         0 |         0
+| dress/coveralls      |   0 |        8 |       32 |         0 |         0 |         0
+| skirt                |   0 |        0 |       32 |         0 |         0 |         0
+| trousers/shorts      |   0 |        0 |       16 |         0 |         0 |         0
+| sweater/pullover     |   0 |       16 |        0 |         0 |         0 |         0
+| jacket               |   0 |       32 |        0 |         0 |         0 |         0
+| coat                 |   0 |       64 |       64 |         0 |         0 |         0
+| socks/stockings      |   0 |        0 |        0 |         2 |         0 |         0
+| tights/pantyhose     |   0 |        0 |        8 |         2 |         0 |         0
+| shoes/boots          |   0 |        0 |        0 |         4 |         0 |         0
+| gloves               |   0 |        0 |        0 |         0 |         2 |         0
+|=====================================================================================
 
 Of course, every adventure is different, so you'll need to work out your own layering system to cover the needs of your adventure.
-Some adventure genres might envolve more clothing items (and therefore, layers) than others -- e.g. in the _fantasy_ genre you might need dedicated layers for armors, cloaks, magic garnments (talismans, etc.).
+Some adventure genres might involve more clothing items (and therefore, layers) than others -- e.g. in the _fantasy_ genre you might need dedicated layers for armors, cloaks, magic garments, talismans, etc.
 
-It's strongly reccomended that you do layout a clothing table like the above, so you can use it as a lookup reference when creating new clothing items.
+It's strongly recommended that you do layout a clothing table like the above, so you can use it as a lookup reference when creating new clothing items.
 
 
 // EOF //
