Drop UTF-8 ALAN Files
Stop converting ALAN sources and transcripts to UTF-8 and directly
include the original ISO-8859-1 files in AsciiDoc sources (fixes #126).

This huge commit entirely removes from the repo all assets that dealt
with creating UTF-8 intermediate versions of the ISO-8559-1 ALAN sources
and transcripts, using instead the new (undocumented) `encoding` option
of Asciidoctor's `include::` directives, which was kindly added by
@mojavelinux on our request for the ALAN-IF projects:

- https://github.com/asciidoctor/asciidoctor/issues/3248

The build toolchain is now much faster than before.
For the full details of the changes, refer see the task list of #126.

--- a/extras_src/manual/StdLibMan2_02.adoc
+++ b/extras_src/manual/StdLibMan2_02.adoc
@@ -23,18 +23,18 @@ Let's being by illustrating the first approach, i.e. the classical way of re-def
 
 .Example: Custom examine response via `VERB DOES ONLY` (from {garden1_alan})
 [source,alan]
-------------------------------------------------
-include::{utf8dir}/garden1.alan[tag=ball_garden]
-------------------------------------------------
+------------------------------------------------------------
+include::./garden1.alan[encoding=iso-8859-1,tag=ball_garden]
+------------------------------------------------------------
 
 
 which will yield
 
 
 [example,role="gametranscript"]
-=====================================================
-include::{utf8dir}/garden1.a3ADocLog[tag=ball_garden]
-=====================================================
+=============================================================
+include::./garden1.a3log[encoding=iso-8859-1,tag=ball_garden]
+=============================================================
 
 
 In the example above, it was necessary to use `DOES ONLY`; if we had used `DOES` instead, the default library response for all things would be shown before the custom reponse: [.play]#You notice nothing unusual about the ball. It's a small red ball.#
@@ -47,7 +47,7 @@ Another way for examining things is to use the `ex` attribute.
 .Example: Custom examine response via the `ex` attribute (from {garden2_alan})
 [source,alan]
 ------------------------------------------------
-include::{utf8dir}/garden2.alan[tag=ball_garden]
+include::./garden2.alan[encoding=iso-8859-1,tag=ball_garden]
 ------------------------------------------------
 
 
@@ -55,9 +55,9 @@ which will yield the same response as the first method:
 
 
 [example,role="gametranscript"]
-=====================================================
-include::{utf8dir}/garden2.a3ADocLog[tag=ball_garden]
-=====================================================
+=============================================================
+include::./garden2.a3log[encoding=iso-8859-1,tag=ball_garden]
+=============================================================
 
 
 but you notice how the needed formulation is shorter.
