--- a/extras_src/tutorials/Clothing_Guide.asciidoc
+++ b/extras_src/tutorials/Clothing_Guide.asciidoc
@@ -34,12 +34,6 @@ help the reader distinguish which code belongs to what:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ////
 
-:utf8dir: ../utf8/tutorials
-// The {utf8dir} attribute points to a folder containing UTF8 versions of Alan
-// sources and transcripts, to allow including them in this doc.
-// The path defined above is used for local previews conversion only; the build
-// script defines it via CLI and overrides it, so the above definition is not
-// relevant for the actual build toolchain.
 
 // *****************************************************************************
 // *                                                                           *
@@ -178,10 +172,8 @@ Now let's dive into some practical examples of how to use clothing, from simple 
 === Simple Clothing
 
 :adv-source:  clothing-01-simple.alan
-:adv-transc1: clothing-01-simple__play1.a3ADocLog
-:adv-transc2: clothing-01-simple__play2.a3ADocLog
-// :adv-transc1: clothing-01-simple__play1.a3log
-// :adv-transc2: clothing-01-simple__play2.a3log
+:adv-transc1: clothing-01-simple__play1.a3log
+:adv-transc2: clothing-01-simple__play2.a3log
 
 * link:{adv-source}[`{adv-source}`]
 
@@ -206,9 +198,9 @@ So, we'll need to implement:
 Let's start by implementing the bedroom.
 
 [source,alan,role=tutorial]
----------------------------------------------
-include::{utf8dir}/{adv-source}[tag=step_one]
----------------------------------------------
+-------------------------------------------------------
+include::{adv-source}[encoding=iso-8859-1,tag=step_one]
+-------------------------------------------------------
 
 // ** UNIFORM **
 
@@ -219,9 +211,9 @@ Also, we'll treat the uniform as a single clothing item, for the purpose here is
 When the game starts, the Hero will be in his bedroom, naked, so we'll just place the uniform lying around in the bedroom.
 
 [source,alan,role=tutorial]
---------------------------------------------
-include::{utf8dir}/{adv-source}[tag=uniform]
---------------------------------------------
+------------------------------------------------------
+include::{adv-source}[encoding=iso-8859-1,tag=uniform]
+------------------------------------------------------
 
 // ** SHOWER **
 
@@ -229,16 +221,16 @@ Now it's time to implement the shower.
 We'll create it as an object and add to it the `take` verb.
 
 [source,alan,role=tutorial]
--------------------------------------------
-include::{utf8dir}/{adv-source}[tag=shower]
--------------------------------------------
+-----------------------------------------------------
+include::{adv-source}[encoding=iso-8859-1,tag=shower]
+-----------------------------------------------------
 
 Its implementation is quite straightforward, so here we'll only comment on the `Check` that prevents taking a shower while carrying/wearing the uniform:
 
 [source,alan,role=tutorial,indent=0]
--------------------------------------------------
-include::{utf8dir}/{adv-source}[tag=shower_check]
--------------------------------------------------
+-----------------------------------------------------------
+include::{adv-source}[encoding=iso-8859-1,tag=shower_check]
+-----------------------------------------------------------
 
 The actual `Check` only needs to verify that the uniform is `not in hero`, for the action is to be prevented regarless of wether the clothing item is being carried or worn -- the whole idea is that it shouldn't get wet.
 If the check condition is violated, we then resort to an `If` statement in order to produce an appropriate response depending on wether the uniform `is worn` or just carried (`else`) by the Hero.
@@ -247,16 +239,16 @@ If the check condition is violated, we then resort to an `If` statement in order
 Let's compile our draft adventure to test that it's behaving as expected.
 
 [example,role="gametranscript"]
-================================================================================
-include::{utf8dir}/{adv-transc1}[]
-================================================================================
+=============================================
+include::./{adv-transc1}[encoding=iso-8859-1]
+=============================================
 
 ////
 *VERBATIM TRANSCRIPT* -- We could also include the unsanitized version of the game transcript, in case it relied on monospace fonts (eg. debguggin):
 
-....................................................
-include::{utf8dir}/clothing-01-simple__play1.a3log[]
-....................................................
+...............................................................
+include::./clothing-01-simple__play1.a3log[encoding=iso-8859-1]
+...............................................................
 
 But we'd need to give it some CSS styling though.
 
@@ -269,16 +261,16 @@ Everything works fine with the shower, so let's carry on and implement the bedro
 Edit the `bedroom` code as follows:
 
 [source,alan,role=tutorial]
--------------------------------------------------
-include::{utf8dir}/{adv-source}[tag=bedroom_exit]
--------------------------------------------------
+-----------------------------------------------------------
+include::{adv-source}[encoding=iso-8859-1,tag=bedroom_exit]
+-----------------------------------------------------------
 
 Here we used `Check uniform directly in hero and uniform is worn` to make sure the Hero doesn't leave the flat without wearing his uniform:
 
 [source,alan,role=tutorial,indent=0]
------------------------------------------------
-include::{utf8dir}/{adv-source}[tag=exit_check]
------------------------------------------------
+---------------------------------------------------------
+include::{adv-source}[encoding=iso-8859-1,tag=exit_check]
+---------------------------------------------------------
 
 This being the logical succession for checking if an actor is wearing a specific clothing item:
 
@@ -298,9 +290,9 @@ Acutally, it would have been sufficient to just `Check uniform is worn`, since t
 Let's compile the final adventure to test that everything is working as expected.
 
 [example,role="gametranscript"]
-================================================================================
-include::{utf8dir}/{adv-transc2}[]
-================================================================================
+=============================================
+include::./{adv-transc2}[encoding=iso-8859-1]
+=============================================
 
 Here ends our first tutorial on how to implement very simple clothing.
 
