Adopt '.a3s' and '.a3t' Extensions
Stop using `.a3sol` and `.a3log` extensions for solutions and transcripts
and use instead the new `.a3s` and `.a3t` official extensions recently
introduced in ARun (see alan-if/alan#2).

This commit contains lots of changes:

- Rename all `*.a3sol` and `*.a3log` files to `*.a3s` and `*.a3t`
- Fix ``include::` directives in AsciiDoc sources.
- Tweak all toolchain scripts to use the new extensions.
- Tweak repository configurations.
- Fix references to old extensions in READMEs and other MD docs.

Fixes #128.

--- a/extras_src/tutorials/Clothing_Guide.asciidoc
+++ b/extras_src/tutorials/Clothing_Guide.asciidoc
@@ -172,8 +172,8 @@ Now let's dive into some practical examples of how to use clothing, from simple 
 === Simple Clothing
 
 :adv-source:  clothing-01-simple.alan
-:adv-transc1: clothing-01-simple__play1.a3log
-:adv-transc2: clothing-01-simple__play2.a3log
+:adv-transc1: clothing-01-simple__play1.a3t
+:adv-transc2: clothing-01-simple__play2.a3t
 
 * link:{adv-source}[`{adv-source}`]
 
@@ -246,9 +246,9 @@ include::./{adv-transc1}[encoding=iso-8859-1]
 ////
 *VERBATIM TRANSCRIPT* -- We could also include the unsanitized version of the game transcript, in case it relied on monospace fonts (eg. debguggin):
 
-...............................................................
-include::./clothing-01-simple__play1.a3log[encoding=iso-8859-1]
-...............................................................
+.............................................................
+include::./clothing-01-simple__play1.a3t[encoding=iso-8859-1]
+.............................................................
 
 But we'd need to give it some CSS styling though.
 
